force-app/main/default/objects/Jira_Issue__c/fields/Jira_Project__c.field-meta.xml
<CustomField>
    <fullName>Jira_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jira Project</label>
    <referenceTo>Jira_Project__c</referenceTo>
    <relationshipLabel>Jira Issues</relationshipLabel>
    <relationshipName>Jira_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>